syntax = "proto3";


package usermgmt;

option go_package = "github.com/tech-with-moss/go-usermgmt-grpc;go_usermgmt_grpc";

service UserManagement {
  rpc CreateNewUser (NewUser) returns (User) {}
  rpc getUsers (getUsersParams) returns (Users) {}
}

message NewUser {
  string name = 1;
  int32 age = 2;
}

message User {
  string name = 1;
  int32 age = 2;
  int32 id = 3; 
}

message getUsersParams {

}

message Users {
  repeated User users = 1; 
}


